<resources>
    <string name="app_name">Haat Bazaar</string>
    <string name="title_activity_product_detail">ProductDetail</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delivery_charge">Delivery charge </string>
    <string name="total">Total </string>
    <string name="remove">Remove</string>
    <string name="checkout">Checkout</string>
    <string name="including_delivery_charge">(Including delivery charge)</string>
    <string name="close_icon">Close icon</string>
    <string name="main_product_image">Main prodcut image</string>
    <string name="product_name">Product Name</string>
    <string name="rs_100">Rs 100</string>
    <string name="buy_now">Buy Now</string>
    <string name="full_location">City - Ward Tole, Zip Code, District, Province, Country</string>
    <string name="time">Time:</string>
    <string name="charge">Charge:</string>
    <string name="location">Location:</string>
    <string name="place_order">Place Order</string>
    <string name="cancel">Cancel</string>
    <string name="no_items_in_cart_currently">No items in cart currently</string>
    <string name="rating">Rating</string>
    <string name="reviews">Reviews</string>
    <string name="detailed_product_description">Detailed Product Description</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="product_price">Product price</string>
    <string name="each_product_description">Each product description</string>
    <string name="price_summary">Price Summary</string>
    <string name="product_image">Product Image</string>
    <string name="product_management">Product Management</string>
    <string name="entity_name">Entity Name</string>
    <string name="search">Search</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="password">Password</string>
    <string name="domain_email_com">domain@email.com</string>
    <string name="email_or_phone">Email or phone number</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="login">Login</string>
    <string name="register">Register Here</string>
    <string name="not_a_member">Not a member?</string>
    <string name="already_a_member">Already a member?</string>
    <string name="confirm_password">Confirm password</string>
    <string name="enter_your_password_again">Enter your password again</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="address">Address</string>
    <string name="enter_your_full_address">Enter your full address</string>
    <string name="phone_number">Phone number</string>
    <string name="login_failed_invalid_username_or_password">Invalid username or password</string>
    <string name="profile_image">Profile Image</string>
    <string name="my_orders">My Orders</string>
    <string name="change_pssword">Change Pssword</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="quantity">Quantity</string>
    <string name="details">Details</string>
    <string name="you_haven_t_ordered_anything_yet_click_here_to_buy_something">You haven\'t ordered anything yet. Click here to buy something</string>
    <string name="no_new_orders">No new orders ☹️</string>
    <string name="add_new">Add new</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="select_image">Select Image</string>
    <string name="name">Name</string>
    <string name="category">Category</string>
    <string name="description">Description</string>
    <string name="previous_price">Previous Price</string>
    <string name="stock">Stock</string>
    <string name="sku">SKU</string>
    <string name="unit_change">Unit Change</string>
    <string name="select_extra_images">Select Extra Images</string>
    <string name="selected_image">Selected Image</string>
    <string name="cancel_icon">Cancel Icon</string>
    <string name="payment_details">Payment Details</string>
    <string name="billing_details">Billing Details</string>
    <string name="order_items">Order Items</string>
    <string name="price_information">Price Information</string>
    <string name="fulfill_order">Fulfill Order</string>
    <string name="shipment_details">Shipment Details</string>
    <string name="transaction_id_n_a">Transaction Id: N/A</string>
    <string name="payment_status_n_a">Payment Status: N/A</string>
    <string name="pay_amount_n_a">Pay Amount: N/A</string>
    <string name="shipment_id_n_a">Shipment Id: N/A</string>
    <string name="shipment_status_n_a">Shipment Status: N/A</string>
    <string name="shipment_date_n_a">Shipment Date: N/A</string>
    <string name="shipmentaddress_n_a">ShipmentAddress: N/A</string>
    <string name="delivery_status">"Delivery Status: "</string>
    <string name="order_status">"Order Status: "</string>
    <string name="shipment_status">"Shipment Status: "</string>
    <string name="payment_status">"Payment Status: "</string>
    <string name="payment_detail">Payment Detail</string>
    <string name="complete_payment">Complete payment</string>
    <string name="payment_completed">Payment Completed</string>
    <string name="esewa">Esewa</string>
    <string name="khalti">Khalti</string>
    <string name="payment_options">Payment Options</string>
    <string name="channel_name">notification</string>
    <string name="channel_description">channel_description</string>
    <string name="send">Send</string>
    <string name="enter_your_email_to_receive_a_password_reset_otp">Enter your email to receive a password reset OTP</string>
    <string name="forget_password">Forget Password</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="new_password">New Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="email_is_required">Email is required</string>
    <string name="invalid_email_address">Invalid email address</string>
    <string name="enter_the_6_digit_otp">Enter the 6-digit OTP</string>
    <string name="otp_has_expired">OTP has expired</string>
    <string name="didn_t_receive_the_otp_tap_to_resend">Did not receive the OTP? Tap to resend</string>
    <string name="an_error_occurred_please_try_again">An error occurred. Please try again.</string>
    <string name="reset_your_password">Reset Your Password</string>
    <string name="please_fill_all_the_fields">Please fill all the fields</string>
    <string name="passwords_do_not_match">New Password and Confirm Password do not match</string>
    <string name="edited">(Edited)</string>
    <string name="no_reviews_yet">No Reviews Yet</string>
    <string name="rate">Rate</string>
    <string name="write_your_review_here">Write your review here...</string>
</resources>