<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_item_search_view"
        android:title="@string/search"
        android:icon="@drawable/baseline_search_24"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <item
        android:id="@+id/menu_item_cart"
        android:title="@string/cart"
        android:icon="@drawable/baseline_shopping_cart_24"
        app:showAsAction="always|collapseActionView"
        />

    <item
        android:id="@+id/menu_item_profile"
        android:title="@string/profile"
        android:icon="@drawable/baseline_account_circle_24"
        app:showAsAction="always|collapseActionView"
        android:visible="false"
        />

</menu>