<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".ForgetPasswordActivity">

    <!-- Space that takes up 1/3 of height -->
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <!-- Wrap your content inside another LinearLayout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:padding="16dp"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:textSize="24sp"
            android:gravity="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_your_email_to_receive_a_password_reset_otp"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:labelFor="@+id/emailET"
            android:layout_marginBottom="4dp" />

        <EditText
            android:id="@+id/emailET"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/rounded_edittext"
            android:paddingHorizontal="12dp"
            android:layout_marginTop="10dp"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:id="@+id/messageTv"
            android:layout_marginTop="4dp"
            android:textColor="@color/uikit_light_red_200"
            android:layout_marginBottom="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_marginTop="10dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:id="@+id/cancel_button"
                android:text="@string/cancel"
                android:layout_marginEnd="20dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/send_button"
                android:layout_gravity="end|center_horizontal"
                android:text="@string/send"
                android:layout_marginEnd="20dp" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
